Add all scenario comparisons

--- a/paths.yml
+++ b/paths.yml
@@ -70,7 +70,7 @@ outputs:
     scenario_temperatures: "io/outputs/figures/scenario_temperatures.pdf"
     scenario_loads: "io/outputs/figures/scenario_node_loads.pdf"
     average_parallel: "io/outputs/figures/average_parallel.pdf"
-    compare: "io/outputs/figures/compare.pdf"
+    compare_all: "io/outputs/figures/compare_all.pdf"
 
     # Runtime figures
     interactive_parallel: "io/outputs/figures/runtime_interactive_parallel.html"
