Generate figure for metrics for average week

--- a/paths.yml
+++ b/paths.yml
@@ -73,6 +73,7 @@ outputs:
 
     # Results figures
     compare_parallel: "io/outputs/figures/compare_average_parallel.pdf"
+    compare_parallel_metrics: "io/outputs/figures/compare_parallel_metrics.pdf"
     compare_single: "io/outputs/figures/compare_single.pdf"
     compare_relative: "io/outputs/figures/compare_relative.pdf"
     compare_global: "io/outputs/figures/compare_global.pdf"
